RESOLVED FIXED27166
Find for strings composed entirely of spaces doesn't work
https://bugs.webkit.org/show_bug.cgi?id=27166
Summary Find for strings composed entirely of spaces doesn't work
Darin Adler
Reported 2009-07-10 17:50:58 PDT
Use Find and start typing spaces. You'll never find anything.
Attachments
patch; needs regression test (1.39 KB, patch)
2009-07-10 17:53 PDT, Darin Adler
no flags
patch (8.35 KB, patch)
2009-07-13 10:45 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2009-07-10 17:53:10 PDT
Created attachment 32597 [details] patch; needs regression test
Darin Adler
Comment 2 2009-07-10 17:53:23 PDT
Darin Adler
Comment 3 2009-07-13 10:45:55 PDT
mitz
Comment 4 2009-07-13 11:01:02 PDT
Comment on attachment 32665 [details] patch > - // whitespace, so we won't even try. This also takes care of the empty string case. What takes care of the empty string case now? Is there a test for it? r=me if the empty string case is covered.
Darin Adler
Comment 5 2009-07-13 11:15:17 PDT
The empty string case does work fine but I should have included that in the test.
Darin Adler
Comment 6 2009-07-13 17:03:34 PDT
Note You need to log in before you can comment on or make changes to this bug.