WebCore:

2009-07-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=27166
        rdar://problem/7015857
        Find for strings composed entirely of spaces doesn't work

        Test: fast/text/find-spaces.html

        * editing/TextIterator.cpp:
        (WebCore::findPlainText): Removed unneeded special case.
        The empty string case already works correctly.

LayoutTests:

2009-07-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=27166
        rdar://problem/7015857
        Find for strings composed entirely of spaces doesn't work

        * fast/text/find-spaces-expected.txt: Added.
        * fast/text/find-spaces.html: Copied from LayoutTests/fast/text/find-case-folding.html.



Canonical link: https://commits.webkit.org/37481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45847 268f45cc-cd09-0410-ab3c-d52691b4dbfc